--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
-    "bootstrap": "^3.3.6",
-    "consolidate": "^0.14.0",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.13.1",
-    "jade": "~1.11.0",
-    "morgan": "~1.6.1",
-    "nunjucks": "^2.4.2",
-    "serve-favicon": "~2.3.0"
+    "body-parser": "1.13.2",
+    "bootstrap": "3.3.6",
+    "consolidate": "0.14.0",
+    "cookie-parser": "1.3.5",
+    "debug": "2.2.0",
+    "express": "4.13.1",
+    "morgan": "1.6.1",
+    "nunjucks": "2.4.2",
+    "serve-favicon": "2.3.0"
   }
 }
